# h1-emergence

./: Cargo.toml  README.md
docs/: APPLICATIONS.md  ML-COMPARISON.md  THEORY.md
examples/: h1-demo.rs
src/: graph.rs  lib.rs  timeseries.rs  types.rs
tests/: integration.rs
